[package]
name = "tokio-minihttp"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"

edition = "2018"

[dependencies]
bytes = "0.4"
chrono = "0.4"
futures = "0.1.11"
httparse = "1.1.2"
log = "0.4"
net2 = "0.2"
tokio-codec = "0.1.0"
tokio-core = "0.1.0"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[dev-dependencies]
num_cpus = "1.0"
env_logger = { version = "0.7", default-features = false }
serde_json = "1"
